# datetime-mcp-server

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  benchmark_results.json  docker-compose.yml  health_check.py  justfile  new_benchmark_results.json  performance_report.html  pyproject.toml  pytest-benchmark.ini  run_tests.sh  server_stability_log.json
.cursor/rules/: anthropic-chain-of-thought.mdc  bossjones-cursor-tools.mdc  changelog.mdc  cheatsheet.mdc  code-context-gatherer.mdc  debug-gh-actions.mdc  docs.mdc  fastmcp.mdc  get_context_for_llm.mdc  github-actions-uv.mdc  greenfield-documentation.mdc  greenfield-execution.mdc  greenfield-index.mdc  greenfield.mdc  incremental-task-planner.mdc  iterative-debug-fix.mdc  iterative-development-workflow.mdc  notify.mdc  output_txt_context.mdc  project-layout.mdc  tdd.mdc  test-generator.mdc  tree.mdc  uv.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml  security.yml
.vooster/: project.json  rules.json
ai_docs/: langgraph.txt
docs/: timeout-troubleshooting.md
scripts/: generate_performance_report.py  monitor_server.py  stress_test_server.py
src/datetime_mcp_server/: __main__.py  client.py  http_server.py  logging_config.py  main.py  server.py
tests/acceptance/: test_http_transport.py  test_server.py  test_server_integration.py
tests/performance/: test_benchmarks.py  test_stability.py
vooster-docs/: architecture.md  prd.md
