[project]
name = "datetime-mcp-server"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.2.1",]
[[project.authors]]
name = "Malcolm Jones"
email = "bossjones@theblacktonystark.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
datetime-mcp-server = "datetime_mcp_server:main"
